--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Homepage</title>
 </head>
 <body>
     <header>
         <h1>Welcome to My Homepage</h1>
-        <nav>
+        <nav class="nav-bar">
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Contact</a></li>
+                <li> <a href="index.html" class="active">Home</a></li>
+                <li> <a href="about.html">About Us</a></li>
+                <li> <a href="times.html">Times</a></li>
+                <li> <a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -33,6 +34,13 @@
                 <li>Service 3</li>
             </ul>
         </section>
+
+
+<div class="image-container">
+    <img src="image1.jpg" alt="Image 1">
+    <img src="image2.jpg" alt="Image 2">
+    <img src="image3.jpg" alt="Image 3">
+</div>
     </main>
 
     <footer>
